# dedaverse

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  BRANCHING_STRATEGY.md  CLAUDE.md  IMPROVEMENTS.md  INSTALLATION.md  INTERESTING_THINGS.txt  README.md  README.usd-binaries.md  create_dialogs.txt  initial_target.txt  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: tests.yml
.venv_DEV/: pyvenv.cfg
.venv_DEV/Scripts/: activate  activate.bat
docs/: ASSET_METADATA_DESIGN.md  INVESTIGATION_OMNIVERSE_RTX_AND_HDSTORM.md  PROJECT_BRIEF.md  VIEWER_ALTERNATIVE_RENDERING_BACKENDS.md  VIEWER_USDVIEW_TO_RUST_REPORT.md
src/deda/: __init__.py  log.py
src/deda/ai/: _neural_network.py
src/deda/app/: __init__.py  __main__.py  _app.py  _asset_browser.py  _asset_info.py  _buttons.py  _dialogs.py  _eventfilter.py  _graphics_view.py  _main_window.py  _panel.py  _preferences.py  _project_settings.py  _taskbar_icon.py  _usd_viewer.py  stylesheet
src/deda/app/icons/: gear_icon.psd  green_plus.psd  pencil_cursor.psd  questionmark.pmg  questionmark_small.psd  star_icon.psd
src/deda/app/task/: _task.py  _task.py.py
src/deda/core/: __init__.py  _amazon_photos.py  _check_for_updates.py  _config.py  _photos.py  _plugin.py  _project.py  _types.py  _user_config.py
src/deda/core/ai/: __init__.py  _model1.py  _usd_training.py
src/deda/core/finder/: _adobe.py  _unreal.py
src/deda/core/operation/: __init__.py  __main__.py  _config.py  _prompts.py  _runner.py  _server.py  _tasks.py
src/deda/core/operation/templates/: default.md
src/deda/core/operation/templates/examples/: task.md
src/deda/core/types/: __init__.py  _asset.py  _asset_id.py  _collection.py  _element.py  _entity.py  _project.py  _sequence.py  _shot.py
src/deda/core/viewer/: __init__.py  __main__.py  _annotation.py  _app.py  _camera_reticle.py  _playbar.py  _reticle.py  _slate.py  _usd_viewer.py  _window.py
src/deda/dcc/: __init__.py  _eventfilter.py
src/deda/model/: _types.py
src/deda/plugins/application_manager/: __init__.py
src/deda/plugins/asset_manager/: __init__.py
src/deda/plugins/autodesk_flow/: __init__.py
src/deda/plugins/godot/: __init__.py  logo_dark copy.psd
src/deda/plugins/houdini/: __init__.py
src/deda/plugins/jira/: __init__.py
src/deda/plugins/jira/icons/: README.txt
src/deda/plugins/maya/: __init__.py
src/deda/plugins/ollama/: __init__.py  _api_client.py  _model_browser.py  _tool_window.py
src/deda/plugins/perforce/: __init__.py  __init__2.py
src/deda/plugins/photoshop/: __init__.py
src/deda/plugins/plugin_manager/: __init__.py  plug-01 copy.psd
src/deda/plugins/project_manager/: __init__.py
src/deda/plugins/shell/: README.md  __init__.py
src/deda/plugins/substance/: __init__.py
src/deda/plugins/trellis/: __init__.py  _api_client.py  _tool_window.py
src/deda/plugins/zbrush/: __init__.py
src/dedaverse/: __main__.py
tests/: check_coverage_all_modules.py  test_ai_model1.py  test_ai_neural_network.py  test_ai_usd_training.py  test_amazon_photos.py  test_app_app.py  test_app_asset_browser.py  test_app_asset_info.py  test_app_buttons.py  test_app_dialogs.py  test_app_eventfilter.py  test_app_get_proc_under_mouse.py  test_app_graphics_view.py  test_app_launcher.py  test_app_main_window.py  test_app_project_settings.py  test_app_task.py  test_app_taskbar_icon.py  test_app_usd_viewer.py  test_asset_metadata_structure.py  test_check_for_updates.py  test_config.py  test_core_operation_config.py  test_core_operation_prompts.py  test_core_operation_runner.py  test_core_operation_server.py  test_core_operation_tasks.py  test_dcc_eventfilter.py  test_finder_adobe.py  test_finder_houdini.py  test_finder_maya.py  test_finder_substance.py  test_finder_unreal.py  test_imports.py  test_launcher_adobe.py  test_launcher_houdini.py  test_launcher_maya.py  test_launcher_substance.py  test_log.py  test_main.py  (+16 more)
