[project]
name = "dedaverse"
dynamic = ["version"]
dependencies = [
  "usd-core>=25.11",
  "PySide6>=6.6",
  "p4python>=2024.2",
  "coloredlogs",
  "click",
  "packaging",
  "psutil",
  "dataclasses_json",
  "requests"
]
requires-python = ">= 3.12"
authors = [
  {name = "Ben Deda"}
]
maintainers = [
  {name = "Ben Deda"}
]
readme = "README.md"

[project.optional-dependencies]
dev = [
  "bandit[toml]>=1.7",
  "pre-commit>=3.0",
  "pytest>=8.0",
  "pytest-cov>=4.0",
  "radon>=6.0",
]

[project.scripts]
dedaverse = "dedaverse.__main__:dedaverse"

[tool.setuptools.package-data]
"deda" = ["app/icons/*.png"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "-m", "not network",
    "--tb=short",
    "--cov=src/deda",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-report=html",
    "--cov-fail-under=0",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "network: marks tests that require network access (deselect with '-m \"not network\"' for offline unit runs)",
]

[tool.coverage.run]
source = ["src/deda"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
show_missing = true
skip_covered = false
precision = 2

[tool.coverage.html]
directory = "htmlcov"

[tool.bandit]
exclude_dirs = ["tests", ".*", "venv", ".venv"]
skips = ["B101", "B110"]  # B101 assert_used (tests); B110 try_except_pass (treat separately)
targets = ["src/deda"]

[tool.radon.complexity]
min = "C"
max_line_length = 120
exclude = ["tests/*", ".*", "*/venv/*", "*/.venv/*"]
no_assert = true
show_closures = false
total_average = true